--- a/src/app/componentes/registrar/registrar.component.html
+++ b/src/app/componentes/registrar/registrar.component.html
@@ -1,1 +1,36 @@
-<p>registrar works!</p>
+<h3>Registrar</h3>
+<div class="container">
+    <form (ngSubmit)="submitRegistrar()" #registrarForm="ngForm">
+        <div class="form-group">
+            <label for="nombre">Nombre (Personal O De La Empresa)</label>
+            <input type="text" class="form-control" id="nombre" [(ngModel)]="cuentahabiente.nombre"
+            name="nombre" #nombre="ngModel">
+        </div>
+        <div class="form-group">
+            <label for="calle">Calle</label>
+            <input type="text" class="form-control" id="calle" [(ngModel)]="cuentahabiente.calle"
+            name="calle" #calle="ngModel">
+        </div>
+        <div class="form-group">
+            <label for="Colonia">Colonia</label>
+            <input type="text" class="form-control" id="colonia" [(ngModel)]="cuentahabiente.colonia"
+            name="colonia" #colonia="ngModel">
+        </div>
+        <div class="form-group">
+            <label for="Numero">Numero</label>
+            <input type="text" class="form-control" id="numero" [(ngModel)]="cuentahabiente.numero"
+            name="numero" #numero="ngModel">
+        </div>
+        <div class="form-group">
+            <label for="fondos">Fondos</label>
+            <input type="text" class="form-control" id="fondos" [(ngModel)]="cuentahabiente.fondos"
+            name="fondos" #fondos="ngModel">
+        </div>
+        <div class="form-group">
+            <label for="password">Contraseña</label>
+            <input type="password" class="form-control" id="password" [(ngModel)]="cuentahabiente.password"
+            name="password" #password="ngModel">
+        </div>
+        <button type="submit" class="btn btn-primary">Registrar</button>
+    </form>
+</div>
