--- a/src/app/componentes/principal/principal.component.html
+++ b/src/app/componentes/principal/principal.component.html
@@ -1,1 +1,5 @@
-<p>principal works!</p>
+<div class="container">
+    <a class="btn btn-primary" [routerLink]="['/movimientos']">Movimientos</a>
+    <a class="btn btn-primary" [routerLink]="['/pagos']">Pagos y Transferencias</a>
+    <h2>Saldo: ${{cuentahabiente.fondos}}</h2>
+</div>
