--- a/src/app/componentes/movimientos/movimientos.component.html
+++ b/src/app/componentes/movimientos/movimientos.component.html
@@ -1,6 +1,12 @@
+<nav class="navbar">
+    <a class="navbar-brand" href="#">Bancomer <span style="color: red;">T</span></a>
+    <form class="form-inline my-2 my-lg-0">
+            <button class="btn btn-primary my-2 my-sm-0" type="submit">Salir</button>
+        </form>
+</nav>
 <div class="container">
-    <h3>Movimientos</h3>
-    <table class="table table-dark">
+    <h3 style="text-align: center;">Movimientos</h3>
+    <table class="table navbar-dark bg-primary">
         <thead>
             <th scope="col">Fecha</th>
             <th scope="col">Tipo</th>
