--- a/src/app/componentes/principal/principal.component.html
+++ b/src/app/componentes/principal/principal.component.html
@@ -1,5 +1,30 @@
+<nav class="navbar">
+    <a class="navbar-brand" href="#">Bancomer <span style="color: red;">T</span></a>
+    <form class="form-inline my-2 my-lg-0">
+            <button class="btn btn-primary my-2 my-sm-0" type="submit">Salir</button>
+        </form>
+</nav>
 <div class="container">
+<h1 style="text-align: center;">Bienvenido "Nombre de usuario"</h1>
+<div class="row row-style">
+<div class="col-8">
+             <h3>¿Que deseas hacer?</h3>
+<button type="button" class="btn btn-style btn-primary" [routerLink]="['/movimientos']">Movimientos</button><br><br>
+<button type="button" class="btn btn-style btn-primary" [routerLink]="['/pagos']">Tranferencia  y Pagos</button><br><br>
+</div> 
+<div class="col-4">
+     <div class="card-container">
+        <div class="card">
+                <div class="card-header" style="background-color: red; color:white;">Saldo de cuenta</div>
+                <div class="card-body" style="">Tu saldo actual es de:</div> 
+                <div class="card-footer" style="text-align:left;">${{cuentahabiente.fondos}}</div>
+            </div>
+        </div>
+</div> 
+</div>
+
+<!-- <div class="container">
     <a class="btn btn-primary" [routerLink]="['/movimientos']">Movimientos</a>
     <a class="btn btn-primary" [routerLink]="['/pagos']">Pagos y Transferencias</a>
     <h2>Saldo: ${{cuentahabiente.fondos}}</h2>
-</div>
+</div> -->
